--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ fonttools==4.56.0
 ipykernel==6.29.5
 ipython==8.32.0
 jedi==0.19.2
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
@@ -26,6 +27,7 @@ numpy==2.2.3
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+patsy==1.0.1
 pillow==11.1.0
 platformdirs==4.3.6
 polars==1.23.0
@@ -36,15 +38,18 @@ Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
-pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.1
 quarto==0.1.0
 referencing==0.36.2
 rpds-py==0.23.1
+scikit-learn==1.6.1
+scipy==1.15.2
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+statsmodels==0.14.4
+threadpoolctl==3.5.0
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
