--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,7 @@ prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 psutil==7.0.0
 pure_eval==0.2.3
+pyarrow==19.0.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
