--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ fqdn==1.5.1
 free_proxy==1.1.3
 great-tables==0.17.0
 h11==0.14.0
+highlight-text==0.2
 htmltools==0.6.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -95,6 +96,7 @@ pyarrow==19.0.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+pyfonts==0.0.2
 Pygments==2.19.1
 pypalettes==0.1.5
 pyparsing==3.2.1
